--- a/.github/workflows/autoclean.yml
+++ b/.github/workflows/autoclean.yml
@@ -29,7 +29,7 @@ jobs:
           # You should store this as a repository secret.
           GITHUB_TOKEN: ${{ secrets.PAT_WITH_DELETE_PACKAGES }}
           # The name of your GitHub organization or user account.
-          GITHUB_OWNER: 'your-organization-name'
+          GITHUB_OWNER: '8090nike'
           # The number of recent versions to keep for each package.
           MIN_VERSIONS_TO_KEEP: 10
         run: |
