--- a/.github/workflows/autoclean.yml
+++ b/.github/workflows/autoclean.yml
@@ -7,7 +7,7 @@ name: Package Cleanup
 # The cron expression below means "at midnight (00:00) every day".
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '5 * * * *'
 
 # The workflow needs 'write' permissions on packages to delete them.
 permissions:
