--- a/.github/workflows/autoclean.yml
+++ b/.github/workflows/autoclean.yml
@@ -31,8 +31,8 @@ jobs:
         run: |
           # Log in to GitHub CLI using the PAT.
           # We pipe the token directly to the command to avoid the environment variable conflict.
-          echo "${{ secrets.PAT_WITH_DELETE_PACKAGES }}" | gh auth login --with-token
-
+          # echo "${{ secrets.PAT_WITH_DELETE_PACKAGES }}" | gh auth login --with-token
+          echo "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" | gh auth login --with-token
           # Get a list of all packages in the organization/user account.
           # The `jq` command extracts just the package names.
           package_names=$(gh api --method GET -H "Accept: application/vnd.github.v3+json" /orgs/${{ env.GITHUB_OWNER }}/packages?package_type=container --jq '.[].name' -q)
